# medical

./: .gitignore  README.md  SUMMARY.md  build_exe.sh  build_pyinstaller.sh  pyproject.toml  requirements.txt  run.py  setup.py  test.py
.github/workflows/: build-windows.yml
data/: .vault_key  admin_vault.json  api_keys.json
docs/: API_KEY_MANAGEMENT.md  QUICKSTART_API.md
outputs/1.2.276.0.7230010.3.0.3.5.1.11164526.2070518808/: results.json
outputs/1.2.392.200036.9107.307.19802.20200225.164341.1070041/: results.json
outputs/1.2.392.200046.100.2.1.1.157685.20200716140330.1.1.1/: results.json
outputs/1.2.410.200049.2.1.100.4000094.3.1.20181117091754000/: results.json
outputs/DICOM_NGUYEN VAN TIEN KIET_1762490991396/: results.json
outputs/uploads/: 61e6b19a-131d-4aa6-8772-98c121be935f.dcm
requirements/: api.txt  base.txt  dev.txt  prod.txt
scripts/: manage_apikeys.sh  run_pipeline.sh  start_api.sh  test_api_client.py  test_api_curl.sh
src/: __init__.py  config.py
src/api/: auth.py  server.py
src/models/: binary.py  bodypart.py  detection.py  multilabel.py
src/pipeline/: chestxray.py
src/utils/: dicom.py
